--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.0",
+    "jest": "^29.0.0",
     "prettier": "^2.7.1",
     "typescript": "*",
     "vite": "^3.0.7"
