--- a/package.json
+++ b/package.json
@@ -1,45 +1,56 @@
 {
-  "name": "croct-challenge",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@types/react-avatar-editor": "^13.0.0",
-    "rc-slider": "^10.0.1",
-    "react": "^18.2.0",
-    "react-avatar-editor": "^13.0.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.2",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@testing-library/react": "^13.3.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "@vitejs/plugin-react": "^2.0.1",
-    "eslint": "^8.0.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^22.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.0",
-    "jest": "^29.0.0",
-    "prettier": "^2.7.1",
-    "typescript": "*",
-    "vite": "^3.0.7"
-  },
-  "main": "main.tsx",
-  "license": "MIT"
+   "name": "croct-challenge",
+   "private": true,
+   "version": "0.0.0",
+   "type": "module",
+   "scripts": {
+      "dev": "vite",
+      "build": "tsc && vite build",
+      "preview": "vite preview",
+      "test": "jest --watchAll"
+   },
+   "dependencies": {
+      "@types/react-avatar-editor": "^13.0.0",
+      "rc-slider": "^10.0.1",
+      "react": "^18.2.0",
+      "react-avatar-editor": "^13.0.0",
+      "react-dom": "^18.2.0",
+      "react-dropzone": "^14.2.2",
+      "styled-components": "^5.3.5"
+   },
+   "devDependencies": {
+      "@swc/core": "^1.2.242",
+      "@swc/jest": "^0.2.22",
+      "@testing-library/jest-dom": "^5.16.5",
+      "@testing-library/react": "^13.3.0",
+      "@testing-library/user-event": "^14.4.3",
+      "@types/jest": "^28.1.8",
+      "@types/react": "^18.0.17",
+      "@types/react-dom": "^18.0.6",
+      "@types/styled-components": "^5.1.26",
+      "@typescript-eslint/eslint-plugin": "^5.35.1",
+      "@typescript-eslint/parser": "^5.35.1",
+      "@vitejs/plugin-react": "^2.0.1",
+      "canvas": "^2.9.3",
+      "eslint": "^8.0.1",
+      "eslint-config-airbnb": "^19.0.4",
+      "eslint-config-prettier": "^8.5.0",
+      "eslint-config-standard-with-typescript": "^22.0.0",
+      "eslint-plugin-import": "^2.25.2",
+      "eslint-plugin-jsx-a11y": "^6.6.1",
+      "eslint-plugin-n": "^15.0.0",
+      "eslint-plugin-prettier": "^4.2.1",
+      "eslint-plugin-promise": "^6.0.0",
+      "eslint-plugin-react": "^7.31.0",
+      "identity-obj-proxy": "^3.0.0",
+      "jest": "^29.0.0",
+      "jest-environment-jsdom": "^29.0.0",
+      "prettier": "^2.7.1",
+      "ts-jest": "^28.0.8",
+      "ts-node": "^10.9.1",
+      "typescript": "*",
+      "vite": "^3.0.7"
+   },
+   "main": "main.tsx",
+   "license": "MIT"
 }
